--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -192,6 +192,8 @@
     <ClInclude Include="engine\entitymanager.h" />
     <ClInclude Include="engine\entitypattern.h" />
     <ClInclude Include="engine\tickcontext.h" />
+    <ClInclude Include="gfx\bufferlock.h" />
+    <ClInclude Include="gfx\dynamicvb.h" />
     <ClInclude Include="gfx\gfxmanager.h" />
     <ClInclude Include="gfx\rendercontext.h" />
     <ClInclude Include="gfx\shader.h" />
@@ -244,6 +246,8 @@
     <ClCompile Include="engine\entitymanager.cpp" />
     <ClCompile Include="engine\entitypattern.cpp" />
     <ClCompile Include="engine\tickcontext.cpp" />
+    <ClCompile Include="gfx\bufferlock.cpp" />
+    <ClCompile Include="gfx\dynamicvb.cpp" />
     <ClCompile Include="gfx\gfxmanager.cpp" />
     <ClCompile Include="gfx\rendercontext.cpp" />
     <ClCompile Include="gfx\shader.cpp" />
