--- a/engine/src/bigball.vcxproj
+++ b/engine/src/bigball.vcxproj
@@ -167,6 +167,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="bigball.h" />
+    <ClInclude Include="core\compress.h" />
     <ClInclude Include="core\json.h" />
     <ClInclude Include="core\map_rh.h" />
     <ClInclude Include="core\memory.h" />
@@ -214,6 +215,7 @@
     <ClInclude Include="ui\uimanager.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="core\compress.cpp" />
     <ClCompile Include="core\json.cpp" />
     <ClCompile Include="core\memory.cpp" />
     <ClCompile Include="core\hash.cpp" />
