--- a/engine/src/bigball.vcxproj.filters
+++ b/engine/src/bigball.vcxproj.filters
@@ -155,6 +155,9 @@
     <ClInclude Include="gfx\bufferlock.h">
       <Filter>gfx</Filter>
     </ClInclude>
+    <ClInclude Include="core\compress.h">
+      <Filter>core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
@@ -268,6 +271,9 @@
     </ClCompile>
     <ClCompile Include="gfx\bufferlock.cpp">
       <Filter>gfx</Filter>
+    </ClCompile>
+    <ClCompile Include="core\compress.cpp">
+      <Filter>core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
